Update to BrobInt.java